# Functional-parsing-Cpp20

./: CMakeLists.txt  README.md
Functional_parsing/: CMakeLists.txt  Functional_parsing.cpp  Functional_parsing.h
